<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/xxxhdpi1"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/holder_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.050000012">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="7dp"
                android:drawableStart="@drawable/icon_mail"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:nextFocusDown="@+id/username"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/white" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/holder_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/holder_email">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="7dp"
                android:drawableStart="@drawable/icon_person"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:nextFocusDown="@+id/firts_name"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/white" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/holder_firts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/holder_username">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/firts_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="7dp"
                android:drawableStart="@drawable/icon_person"
                android:hint="@string/firts_name"
                android:imeOptions="actionNext"
                android:nextFocusDown="@+id/last_name"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/holder_last"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/holder_firts">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="7dp"
                android:drawableStart="@drawable/icon_person"
                android:hint="@string/last_name"
                android:imeOptions="actionNext"
                android:nextFocusDown="@+id/dni"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/white" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/dni_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/holder_last">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/dni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="7dp"
                android:drawableStart="@drawable/icon_person"
                android:hint="@string/dni"
                android:imeOptions="actionNext"
                android:nextFocusDown="@+id/country_auto"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/white" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/holder_country"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dni_layout">

            <AutoCompleteTextView
                android:id="@+id/country_auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="7dp"
                android:drawableStart="@drawable/icon_country"
                android:hint="@string/country_auto"
                android:imeOptions="actionNext"
                android:nextFocusDown="@+id/password"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/white" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/holder_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/holder_country">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="7dp"
                android:drawableStart="@drawable/icon_password"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:nextFocusDown="@+id/password_confirm"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/white" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/holder_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/holder_phone">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="7dp"
                android:drawableStart="@drawable/icon_password"
                android:hint="@string/password_confirm"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/white" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/singup_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/main_button"
            android:text="@string/signup_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/holder_confirm" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>